--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <a id="openProfil" class="btn" href="test-enneagramme-sans-indice.html">Passer le test</a>
             <a class="btn" href="explore.html">Explorer l'Ennéagramme</a>
             <button id="btnChooseProfiles" class="btn" type="button">Explorer les profils</button>
-            <button id="chatOpenBtn2" class="btn btn-chat" type="button">Chat privé</button>
+            <button id="chatOpenBtn2" class="btn btn-chat" type="button">Poser une question</button>
           </div>
         </div>
       </aside>
