--- a/index.html
+++ b/index.html
@@ -247,7 +247,11 @@
           <button class="btn" id="chatCloseBtn" type="button">Fermer</button>
         </div>
       </div>
-      <iframe class="chatFrame" id="chatFrame" src="chat-prive.html" title="Chat privé"></iframe>
+      <iframe
+        class="chatFrame"
+        id="chatFrame"
+        src="https://ressources-pratiques-pro.github.io/enn-agramme-/chat-prive.html"
+        title="Chat privé"></iframe>
     </div>
   </div>
 
